--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,9 @@ body{
 /*MENU*/
 .menu{
 	background-color: #E54E79; 
+	width: 100%;
 	height: 50px;
+	z-index: 2;
 }
 
 .izq{
@@ -143,4 +145,7 @@ a:hover{
 	top: 100px;
 	left: 200px;
 	right: 200px;
+}
+nav{
+	position: fixed;
 }
