--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,6 +177,7 @@ a:hover{
 	color: white;
 	text-transform: uppercase;
 	width: 800px;
+	top:0px;
 	margin-top: 20px;
 	padding: 10px;
 	background-color: #00B2A9;
@@ -279,4 +280,14 @@ a.icono:hover{
 	border: none;
 	margin:0;
 	padding: 0;
+}
+#play{
+	display:none;
+	color:white;
+	position: relative;
+	top:400px;
+	background-color: #00B2A9;
+	width: 100%;
+	height: 300px;
+	bottom: 0px;
 }
